; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_libata-sff.c_ata_sff_freeze.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_libata-sff.c_ata_sff_freeze.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_port = type { %struct.TYPE_2__*, i32, i32, %struct.ata_ioports }
%struct.TYPE_2__ = type { i32 (%struct.ata_port*)*, i32 (%struct.ata_port*)* }
%struct.ata_ioports = type { i64 }

@ATA_NIEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ata_sff_freeze(%struct.ata_port* %0) #0 {
  %2 = alloca %struct.ata_port*, align 8
  %3 = alloca %struct.ata_ioports*, align 8
  store %struct.ata_port* %0, %struct.ata_port** %2, align 8
  %4 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %5 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %4, i32 0, i32 3
  store %struct.ata_ioports* %5, %struct.ata_ioports** %3, align 8
  %6 = load i32, i32* @ATA_NIEN, align 4
  %7 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %8 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 8
  %11 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %12 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %15 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 4
  %16 = load %struct.ata_ioports*, %struct.ata_ioports** %3, align 8
  %17 = getelementptr inbounds %struct.ata_ioports, %struct.ata_ioports* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %1
  %21 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %22 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.ata_ioports*, %struct.ata_ioports** %3, align 8
  %25 = getelementptr inbounds %struct.ata_ioports, %struct.ata_ioports* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @iowrite8(i32 %23, i64 %26)
  br label %28

28:                                               ; preds = %20, %1
  %29 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %30 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %29, i32 0, i32 0
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = load i32 (%struct.ata_port*)*, i32 (%struct.ata_port*)** %32, align 8
  %34 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %35 = call i32 %33(%struct.ata_port* %34)
  %36 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %37 = getelementptr inbounds %struct.ata_port, %struct.ata_port* %36, i32 0, i32 0
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load i32 (%struct.ata_port*)*, i32 (%struct.ata_port*)** %39, align 8
  %41 = load %struct.ata_port*, %struct.ata_port** %2, align 8
  %42 = call i32 %40(%struct.ata_port* %41)
  ret void
}

declare dso_local i32 @iowrite8(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
